<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/status_bar"/>
        <!--1-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:background="@color/purple_profit">
                    <TextView
                        android:layout_marginTop="18dp"
                        style="@style/NomeTextProfitTheme"
                        android:textColor="@color/white"
                        android:text="@string/_home_t_zr"/>
                    <TextView
                        android:id="@+id/home_yesterdayProfit"
                        android:layout_marginTop="8dp"
                        style="@style/NomeTextProfitTheme"
                        android:textColor="@color/white"
                        android:textSize="26sp"
                        />
                    <TextView
                        android:layout_marginTop="8dp"
                        style="@style/NomeTextProfitTheme"
                        android:textColor="@color/white"
                        android:text="@string/_home_t_zz"/>
                    <TextView
                        android:id="@+id/home_allProperty"
                        android:layout_marginTop="8dp"
                        style="@style/NomeTextProfitTheme"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        />
                    <View
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white"/>
                    <!--2-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:id="@+id/home_addUpBtn"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:padding="6dp"
                            android:gravity="center"
                            android:orientation="vertical">
                            <TextView
                                style="@style/NomeTextProfitTheme"
                                android:textColor="@color/white"
                                android:text="@string/_home_m_t"/>
                            <TextView
                                android:id="@+id/home_addUpProfit"
                                style="@style/NomeTextProfitTheme"
                                android:textColor="@color/white"
                                />
                        </LinearLayout>
                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/white"/>
                        <LinearLayout
                            android:id="@+id/home_sevenYearBtn"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="6dp"
                            android:orientation="vertical">
                            <TextView
                                style="@style/NomeTextProfitTheme"
                                android:textColor="@color/white"
                                android:text="@string/_home_7"/>
                            <TextView
                                android:id="@+id/home_sevenYear"
                                style="@style/NomeTextProfitTheme"
                                android:textColor="@color/white"
                                />
                        </LinearLayout>
                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/white"/>
                        <LinearLayout
                            android:id="@+id/home_thousandBtn"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="6dp"
                            android:orientation="vertical">
                            <TextView
                                style="@style/NomeTextProfitTheme"
                                android:textColor="@color/white"
                                android:text="@string/_home_t_w"/>
                            <TextView
                                android:id="@+id/home_thousandProfit"
                                style="@style/NomeTextProfitTheme"
                                android:textColor="@color/white"
                                />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <!--3-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/grayshallow"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/home_m3_img"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/a1001"
                        />
                    <TextView
                        android:layout_toEndOf="@id/home_m3_img"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="6dp"
                        style="@style/NomeTextProfitTheme"
                        android:textColor="@color/purple_profit"
                        android:textSize="18sp"
                        android:text="@string/_3"/>
                    <LinearLayout
                        android:id="@+id/home_myAccount"
                        android:layout_width="90dp"
                        android:layout_margin="10dp"
                        android:layout_alignParentEnd="true"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        android:clickable="true"
                        android:background="@drawable/my_btn_bg"
                        android:gravity="center">
                        <TextView
                            style="@style/NomeTextProfitTheme"
                            android:textSize="14sp"
                            android:textColor="@color/red_btn_stroke"
                            android:text="@string/_home_t_m"/>
                    </LinearLayout>
                </RelativeLayout>
                <!--4-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grayshallow">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white">
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="4dp"
                            android:gravity="center"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="70dp"
                                android:src="@drawable/aa1"/>
                            <TextView
                                android:layout_marginTop="8dp"
                                style="@style/NomeTextProfitTheme"
                                android:text="@string/_home_t_sy"/>
                            <TextView
                                style="@style/NomeTextProfitTheme"
                                android:text="@string/_home_t_hq"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="4dp"
                            android:gravity="center"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="70dp"
                                android:src="@drawable/aa2"/>
                            <TextView
                                android:layout_marginTop="8dp"
                                style="@style/NomeTextProfitTheme"
                                android:text="@string/_home_t_sc"/>
                            <TextView
                                style="@style/NomeTextProfitTheme"
                                android:text="@string/_home_t_yf"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="4dp"
                            android:gravity="center"
                            android:layout_height="match_parent">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="70dp"
                                android:src="@drawable/aa3"/>
                            <TextView
                                android:layout_marginTop="8dp"
                                style="@style/NomeTextProfitTheme"
                                android:text="@string/_home_t_aq"/>
                            <TextView
                                style="@style/NomeTextProfitTheme"
                                android:text="@string/_home_t_tk"/>
                        </LinearLayout>
                    </LinearLayout>
                    <!--5-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:paddingStart="4dp"
                        android:paddingEnd="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_alignParentBottom="true">
                        <LinearLayout
                            android:id="@+id/home_btn_redeem"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:clickable="true"
                            android:background="@drawable/home_btn_bg">
                            <ImageView
                                android:padding="6dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/a1002"/>
                            <TextView
                                style="@style/NomeTextProfitTheme"
                                android:textColor="@color/white"
                                android:text="@string/_home_t_sh"/>
                        </LinearLayout>
                        <View
                            android:layout_width="4dp"
                            android:layout_height="wrap_content"/>
                        <LinearLayout
                            android:id="@+id/home_btn_buy"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:clickable="true"
                            android:background="@drawable/home_btn_bg">
                            <ImageView
                                android:padding="6dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/a1003"/>
                            <TextView
                                android:layout_marginStart="10dp"
                                style="@style/NomeTextProfitTheme"
                                android:textColor="@color/white"
                                android:text="@string/_home_t_gm"/>
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
            <include layout="@layout/error_layout"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>