<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/status_bar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="@color/purple_profit">
                <ImageView
                    android:id="@+id/au_null_img"
                    android:layout_centerVertical="true"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/rren"/>
                <TextView
                    android:layout_toEndOf="@id/au_null_img"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    style="@style/NomeTextProfitTheme"
                    android:textColor="@color/white"
                    android:text="@string/_Add_t_lj"/>
                <TextView
                    android:id="@+id/add_allProfit"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    style="@style/NomeTextProfitTheme"
                    android:textColor="@color/white"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="10dp">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    style="@style/NomeTextProfitTheme"
                    android:text="@string/_add_t_date"/>
                <TextView
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    style="@style/NomeTextProfitTheme"
                    android:text="@string/_add_t_sy"/>
            </RelativeLayout>
            <com.jcodecraeer.xrecyclerview.XRecyclerView
                android:id="@+id/add_recyclerView"
                android:background="@color/lightgrey"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <include layout="@layout/empty_layout"/>
    </RelativeLayout>
</LinearLayout>